force-app/main/default/objects/LevelManagment__c/LevelManagment__c.object-meta.xml
<CustomObject>
    <label>Level Managment</label>
    <nameField>
        <displayFormat>Level - {0000}</displayFormat>
        <label>LevelManagment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Level Managments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>