force-app/main/default/objects/LevelManagment__c/fields/New_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Stage__c</fullName>
    <label>New Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>M_Stages</valueSetName>
    </valueSet>
</CustomField>