force-app/main/default/objects/LevelManagment__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>US Pathway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>