force-app/main/default/objects/LevelManagment__c/fields/Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>Stage_Description__c</fullName>
    <label>Stage Description</label>
    <type>TextArea</type>
</CustomField>