force-app/main/default/objects/LevelManagment__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>M_Stages</valueSetName>
    </valueSet>
</CustomField>