force-app/main/default/objects/LevelManagment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stages__c</columns>
    <columns>New_Stage__c</columns>
    <columns>Program_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>