force-app/main/default/objects/LevelManagment__c/listViews/CPA_Level_Management.listView-meta.xml
<ListView>
    <fullName>CPA_Level_Management</fullName>
    <columns>NAME</columns>
    <columns>Stages__c</columns>
    <columns>New_Stage__c</columns>
    <columns>Program_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Name__c</field>
        <operation>equals</operation>
        <value>CPA</value>
    </filters>
    <label>CPA Level Management</label>
</ListView>